Сделал изменения в задаче BJS2-35153